fixed about section alignment

--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,6 @@ html {
 
 body {
   background: linear-gradient(#ffc9d8, #fcdb97);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  height: 100%;
   display: flex;
   flex-direction: column;
   margin: 0;
@@ -78,3 +75,32 @@ body {
   border: 5px solid #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin: 0 auto; }
+
+.paragraph-headings {
+  font-family: "Quicksand", sans-serif;
+  font-size: 50px;
+  color: #b32725;
+  text-transform: uppercase; }
+
+.paragraph-text {
+  font-family: "Quicksand", sans-serif;
+  font-size: 30px;
+  color: #7e7e7e; }
+
+.center-text {
+  text-align: center; }
+
+.right-text {
+  text-align: right; }
+
+.left-text {
+  text-align: left; }
+
+.negative-margin {
+  margin-left: -50px; }
+
+.about {
+  margin: 0 10%; }
+
+.bar {
+  margin-right: 15px; }
